crates/app_runner/errors.txt

      Checking app_runner v0.1.0 (E:\Projects\test\crates\app_runner)
> error[E0433]: failed to resolve: could not find `unix` in `os`
   --> crates\app_runner\src\seat_runtime.rs:5:14
    |
  5 | use std::os::unix::process::CommandExt;
    |              ^^^^ could not find `unix` in `os`
    |
  note: found an item that was configured out
   --> /rustc/01f6ddf7588f42ae2d7eb0a2f21d44e8e96674cf\library\std\src\os\mod.rs:29:5
    |
    = note: the item is gated here
  note: found an item that was configured out
     |
     = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
  System.Management.Automation.RemoteException
> error[E0599]: no method named `pre_exec` found for struct `tokio::process::Command` in the current scope
      --> crates\app_runner\src\seat_runtime.rs:1460:17
       |
  1460 |             cmd.pre_exec(|| {
       |             ----^^^^^^^^ method not found in `tokio::process::Command`
  System.Management.Automation.RemoteException
> error[E0433]: failed to resolve: use of unresolved module or unlinked crate `libc`
      --> crates\app_runner\src\seat_runtime.rs:1461:17
       |
  1461 |                 libc::prctl(libc::PR_SET_PDEATHSIG, libc::SIGKILL);
       |                 ^^^^ use of unresolved module or unlinked crate `libc`
       |
       = help: if you wanted to use a crate named `libc`, use `cargo add libc` to add it to your `Cargo.toml`
  System.Management.Automation.RemoteException
> error[E0433]: failed to resolve: use of unresolved module or unlinked crate `libc`
      --> crates\app_runner\src\seat_runtime.rs:1461:29
       |
  1461 |                 libc::prctl(libc::PR_SET_PDEATHSIG, libc::SIGKILL);
       |                             ^^^^ use of unresolved module or unlinked crate `libc`
       |
       = help: if you wanted to use a crate named `libc`, use `cargo add libc` to add it to your `Cargo.toml`
  System.Management.Automation.RemoteException
> error[E0433]: failed to resolve: use of unresolved module or unlinked crate `libc`
      --> crates\app_runner\src\seat_runtime.rs:1461:53
       |
  1461 |                 libc::prctl(libc::PR_SET_PDEATHSIG, libc::SIGKILL);
       |                                                     ^^^^ use of unresolved module or unlinked crate `libc`
       |
       = help: if you wanted to use a crate named `libc`, use `cargo add libc` to add it to your `Cargo.toml`
  System.Management.Automation.RemoteException
  warning: variable does not need to be mutable
     --> crates\app_runner\src\strategy_runtime.rs:705:13
      |
      |
      = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default
  System.Management.Automation.RemoteException
> Some errors have detailed explanations: E0433, E0599.
> For more information about an error, try `rustc --explain E0433`.
  warning: `app_runner` (bin "app_runner") generated 2 warnings
> error: could not compile `app_runner` (bin "app_runner") due to 5 previous errors; 2 warnings emitted

